--- a/client/src/components/Chat.module.sass
+++ b/client/src/components/Chat.module.sass
@@ -1,3 +1,7 @@
+$primary: #cc5333
+$text: #433f4a
+$pr_hover: lighten($primary, 10%)
+$secondary: #23074d
 
 $breakpoints: ("phone": 400px, "phone-wide": 480px, "phablet": 560px, "tablet-small": 640px, "tablet": 768px, "tablet-wide": 1024px, "desktop": 1280px, "desktop-wide": 1440px, "desktop-max": 1900px,)
 
@@ -9,6 +13,21 @@ $breakpoints: ("phone": 400px, "phone-wide": 480px, "phablet": 560px, "tablet-sm
     @media only screen and (#{$type}-width: $width)
       @content
 
+=custom-scroll($class, $firefox: true)  
+  .#{$class}::-webkit-scrollbar-track
+    -webkit-box-shadow: inset 0 0 1px rgba(0,0,0,0.3)
+    background-color: #F5F5F5
+    border-radius: 6px
+  .#{$class}::-webkit-scrollbar
+    width: 6px
+    background-color: #F5F5F5
+  .#{$class}::-webkit-scrollbar-thumb
+    background-color: $primary
+    border-radius: 6px
+  @if $firefox
+    .#{$class}
+      scrollbar-width: thin
+      scrollbar-color: $primary #F5F5F5
 
 @font-face
   font-family: 'utkonos'
@@ -18,13 +37,22 @@ $breakpoints: ("phone": 400px, "phone-wide": 480px, "phablet": 560px, "tablet-sm
   
   
 \:global 
+  *
+    box-sizing: border-box
+  textarea::-webkit-input-placeholder 
+    color: lighten($text, 45%)
+  textarea::-moz-placeholder
+    color: lighten($text, 45%)
+  textarea:-ms-input-placeholder 
+    color: lighten($text, 45%)
+  textarea::placeholder 
+    color: lighten($text, 45%)
   html
     margin: 0
     padding: 0
     font-size: 10px
     height: 100%    
-    background: linear-gradient(to right, #F3F9A7, #CAC531); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    box-sizing: border-box    
+    background: linear-gradient(to right, #F3F9A7, #CAC531); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */        
   body 
     font-size: 1.6rem
     font-family: 'utkonos'    
@@ -42,15 +70,84 @@ $breakpoints: ("phone": 400px, "phone-wide": 480px, "phablet": 560px, "tablet-sm
     font-size: 6rem
     color: #fefefe      
     background: linear-gradient(#cc5333, #23074d)
-   
-    
-  
 
-.chatWrapper
-  border: 1px solid #333
+.chatWrapper  
   border-radius: 5px
   width: calc(100vw - 50%)
   min-width: 500px
   height: calc(100vh - 250px)
   background-color: #faf9fa
   box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22)
+
+.chatContent
+  height: 100%
+  padding: 2rem 0 1rem
+  display: flex 
+  flex-direction: column
+  justify-content: space-between
+.chatList
+  display: flex 
+  flex-direction: column
+  overflow-y: scroll
+  overflow-x: hidden
++custom-scroll("chatList")
+.chatLineMessage 
+  font-size: 1.4rem
+  padding: 0.5rem 2rem
+  word-wrap: break-word
+  vertical-align: baseline
+  .timeStamp
+    margin-right: 0.5rem
+    color: darken($secondary, 35%)
+  .userName
+    font-size: 1.6rem
+    font-weight: bold
+    color: $secondary    
+  .message
+    font-size: 1.6rem    
+.chatInputBox     
+  width: 100%
+  padding: 0 2rem
+  >div 
+    width: 100%
+  textarea
+    font-family: "utkonos"
+    font-weight: bold    
+    width: 100%
+    height: 6rem
+    border-radius: 4px
+    resize: none
+    -webkit-appearance: none   
+    background: #fff
+    border: 1px solid #dad8de
+    color: $text   
+    line-height: 1.5
+    outline: 0
+    padding: .5rem 1rem
+    padding-right: 5rem   
+    transition: box-shadow .1s ease-in,border .1s ease-in
+  textarea:focus
+    border-color: $primary
+    box-shadow: 0 0 6px -2px $primary    
+.inputButtons
+  display: flex
+  padding: 1rem 0
+  justify-content: center
+  button 
+    padding: 0.4rem 1.8rem
+    display: flex
+    justify-content: center
+    align-items: center   
+    font-size: 1.4rem
+    line-height: 2rem
+    outline: none   
+    text-decoration: none
+    user-select: none
+    cursor: pointer
+    white-space: nowrap
+    background: $primary
+    color: #fff
+    border: 1px solid transparent
+    border-radius: 4px
+  button:hover 
+    background: $pr_hover  
