--- a/client/src/components/Chat.module.sass
+++ b/client/src/components/Chat.module.sass
@@ -22,6 +22,7 @@ $breakpoints: ("phone": 400px, "phone-wide": 480px, "phablet": 560px, "tablet-sm
     border-radius: 6px
   .#{$class}::-webkit-scrollbar
     width: 6px
+    border-radius: 6px
     background-color: #F5F5F5
   .#{$class}::-webkit-scrollbar-thumb
     background-color: $primary
@@ -49,6 +50,11 @@ $breakpoints: ("phone": 400px, "phone-wide": 480px, "phablet": 560px, "tablet-sm
     color: lighten($text, 45%)
   textarea::placeholder 
     color: lighten($text, 45%)
+  a 
+    text-decoration: none 
+    color: inherit
+  h2, h3, h4, h5 
+    text-align: center    
   html
     margin: 0
     padding: 0
@@ -66,15 +72,15 @@ $breakpoints: ("phone": 400px, "phone-wide": 480px, "phablet": 560px, "tablet-sm
     flex-direction: column
     justify-content: center
     align-items: center
-h2,h3 
-  padding: 0 1rem
-  text-align: center
+h2, h3, h4
+  padding: 0 1rem 
   text-transform: uppercase
-  transform: skew(0, -3deg)
-  font-size: 6rem
+  transform: skew(0, -3deg) 
   color: #fefefe      
   background: linear-gradient(#cc5333, #23074d)
-h3   
+h2,h3
+  font-size: 6rem
+h3, h4
   color: $secondary
   background: linear-gradient(#F3F9A7, #CAC531)
   margin-bottom: 3rem 
@@ -97,11 +103,19 @@ h3
   border-radius: 4px
 .chatButton:hover 
   background: $pr_hover
-.loginButton   
+.loginButton, .addRoomButton   
   composes: chatButton
   background: $secondary
-.loginButton:hover
-  background: $sec_hover      
+.loginButton:hover, .addRoomButton:hover
+  background: $sec_hover
+.cancelButton
+  composes: chatButton
+  background: transparent 
+  border: none
+  color: $secondary        
+.cancelButton:hover
+  background: transparent 
+    
 .hidden
   visibility: hidden
 .loginWrapper  
@@ -114,65 +128,65 @@ h3
   min-width: 500px 
   background-color: $primary
   box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22)
-  form 
-    display: flex 
-    flex-direction: column
-    justify-content: center
+form 
+  display: flex 
+  flex-direction: column
+  justify-content: center
+  align-items: center
+  padding: 1rem
+  .formField
+    display: flex
     align-items: center
-    padding: 1rem
-    .formField
-      display: flex
-      align-items: center
-      position: relative      
-      width: 220px
-      margin-bottom: 2rem
-      span 
-        position: absolute
-        left: 8px
-        margin-top: 2px    
-      input
-        border: 2px solid $primary
-        width: 100%
-        padding: 1rem
-        padding-left: 2.5rem
-        background: $white
-        border-radius: 8px
-        font-family: "chat"
-        font-weight: bold
-        transition: box-shadow .1s ease-in,border .1s ease-in
-      input:focus 
-        border: 2px solid $secondary
-        box-shadow: 0 0 6px -2px $primary
-        outline: none
-    .formField.error
-      input
-        border: 2px solid #ff8181        
-        background: #fbcfcf       
-      input:focus 
-        border: 2px solid #ff8181
-        background: #fbcfcf
-        outline: none 
-      ::placeholder, span
-        color: #ff8181   
-  .formErrorWrapper   
-    margin-top: 2rem
-    padding: 0 1rem
-    background: #fbcfcf
-    border: 2px solid #ff8181
-    border-radius: 5px
-    font-size: 1.4rem
-    color: #ab5656
-    ul 
-      padding-left: 2rem
-  .sighupMessage
-    padding: 1rem
-    background: $white
-    border: 1px solid $secondary
-    border-radius: 5px
-    font-size: 1.4rem
-    color: $text
-    a 
+    position: relative      
+    width: 220px
+    margin-bottom: 2rem
+    span 
+      position: absolute
+      left: 8px
+      margin-top: 2px    
+    input
+      border: 2px solid $primary
+      width: 100%
+      padding: 1rem
+      padding-left: 2.5rem
+      background: $white
+      border-radius: 8px
+      font-family: "chat"
       font-weight: bold
+      transition: box-shadow .1s ease-in,border .1s ease-in
+    input:focus 
+      border: 2px solid $secondary
+      box-shadow: 0 0 6px -2px $primary
+      outline: none
+  .formField.error
+    input
+      border: 2px solid #ff8181        
+      background: #fbcfcf       
+    input:focus 
+      border: 2px solid #ff8181
+      background: #fbcfcf
+      outline: none 
+    ::placeholder, span
+      color: #ff8181   
+.formErrorWrapper   
+  margin-top: 2rem
+  padding: 0 1rem
+  background: #fbcfcf
+  border: 2px solid #ff8181
+  border-radius: 5px
+  font-size: 1.4rem
+  color: #ab5656
+  ul 
+    padding-left: 2rem
+.sighupMessage
+  padding: 1rem
+  background: $white
+  border: 1px solid $secondary
+  border-radius: 5px
+  font-size: 1.4rem
+  color: $text
+  a 
+    font-weight: bold
 .chatWrapper  
   display: grid
   grid-template-columns: auto 1fr
@@ -262,48 +276,81 @@ h3
   display: flex
   padding: 1rem 0
   justify-content: center
-.roomList  
-  height: calc(100vh - 250px)
-  padding: 1rem 1rem 0 1rem
-  ul
-    padding: 0 
-    li 
-      padding: 0
-      margin: 0
-      margin-bottom: 1rem
-      display: flex
-      align-items: center
-      list-style: none
-      background: $pr_hover
-      height: 50px
-      justify-content: center
-      font-weight: bold
-      color: $text
-      cursor: pointer
-      a 
-        text-decoration: none
-        color: inherit
+
 +custom-scroll("chatList")   
 .menuWrapper
   display: flex
   flex-direction: column
   align-items: center
-  width: 100px
+  width: 150px
   height: 100%
-  justify-content: stretch 
-  >a 
-    flex-grow: 1
-    display: flex 
-    align-items: center
-    justify-content: center
+  justify-content: stretch
+  border-radius: 5px 0 0 5px
+  background-color: darken($primary, 15%)
+  padding: 1rem
+  .accountInfo   
     width: 100%
-    text-align: center
-    color: #fff
-    text-decoration: none
+    display: flex
+    padding: 1rem
+    padding-bottom: 3rem
     background-color: darken($primary, 15%)
-  >a:hover
-    background-color: $pr_hover
-  >a:first-child
-    border-radius: 5px 0 0 0         
-  >a:last-child
-    border-radius: 0 0 0 5px        
+    border-bottom: 1px solid $white
+    .userCircle
+      width: 25px
+      height: 25px
+      margin-right: 10px
+      border-radius: 50%
+      background-color: $secondary
+      border: 2px solid $white
+    .accountText
+      display: flex
+      flex-direction: column
+      justify-content: center
+      align-items: center
+      position: relative
+      color: $white
+      >span 
+        background: linear-gradient(to right, #f3f9a763 100%, rgb(232, 232, 232) 0%) 100% center / 100% 80% no-repeat
+        background-position: 50% center
+      >a 
+        position: absolute
+        top: 23px
+        right: 0
+        font-size: 1.1rem      
+      >a:hover      
+        font-weight: bold        
+  .roomList
+    flex-grow: 1
+    display: flex
+    flex-direction: column
+    justify-content: space-between
+    padding: 1rem
+    width: 100%
+    background-color: #8f3a24   
+    .roomScroll
+      padding: 0
+      overflow-x: hidden   
+      max-height: 400px         
+      li 
+        padding: 0
+        margin: 0
+        margin-bottom: 1rem
+        display: flex
+        align-items: center
+        list-style: none       
+        height: 25px
+        justify-content: center       
+        color: $white
+        text-decoration: none
+        background-color: darken($primary, 15%)
+        cursor: pointer       
+      li:hover
+        background-color: $pr_hover
+    +custom-scroll("roomScroll")  
+.addRoomWrapper  
+  height: calc(100vh - 250px)
+  padding: 1rem 0 0 1rem
+  .addRoomControls
+    display: flex
+    width: 220px 
+    justify-content: center  
