--- a/client/src/styles/Chat.module.sass
+++ b/client/src/styles/Chat.module.sass
@@ -107,7 +107,7 @@ h2
   background: $pr_hover
 .loginButton, .addRoomButton   
   composes: chatButton  
-  width: 75px
+  min-width: 75px
   height: 30px
   background: $secondary
   >div 
@@ -145,7 +145,7 @@ h2
   justify-content: center
   top: -40px
   left: 0
-  width: calc(100vw - 50% - 5px)
+  width: 100%
   min-width: 500px
   height: 40px
   background-color: #fbcfcf
@@ -159,7 +159,7 @@ form
   flex-direction: column
   justify-content: center
   align-items: center
-  padding: 1rem
+  padding: 1rem  
   .formField
     display: flex
     align-items: center
@@ -184,6 +184,18 @@ form
       border: 2px solid $secondary
       box-shadow: 0 0 6px -2px $primary
       outline: none
+    .forgotPassword
+      color: $white
+      font-weight: bold
+      font-size: 1.2rem
+      position: absolute
+      bottom: -20px
+      right: 5px
+      text-align: right
+    .forgotPassword:hover
+      text-decoration: underline
+  .formField:last-of-type
+    margin-bottom: 3rem
   .formField.error
     input
       border: 2px solid #a53232        
