--- a/client/src/styles/Chat.module.sass
+++ b/client/src/styles/Chat.module.sass
@@ -233,7 +233,7 @@ form
   align-items: center
   justify-content: center
   border-radius: 5px
-  width: calc(100vw - 50%)
+  width: calc(100vw - 20%)
   min-width: 500px 
   background-color: $white
   box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22)   
@@ -244,12 +244,13 @@ form
   background: lighten($primary, 25%)   
   padding: 0 0.5rem 
 .chatContent
-  height: calc(100vh - 250px)
-  padding: 1rem 0 0 1rem
-  display: grid
-  grid-template-columns: 1fr auto
-  grid-template-rows: 30px 1fr 
-  justify-content: space-between
+  >div
+    height: calc(100vh - 250px)
+    padding: 1rem 0 0 1rem
+    display: grid
+    grid-template-columns: 1fr auto
+    grid-template-rows: 30px 1fr 
+    justify-content: space-between
 .chatList
   margin-bottom: 1rem
   display: flex
@@ -259,23 +260,27 @@ form
   overflow-y: scroll
   overflow-x: hidden
 +custom-scroll("chatList")
-.chatLineMessage 
-  font-size: 1.4rem
+.chatLineMessage   
   padding: 0 0.5rem
   word-wrap: break-word
   vertical-align: baseline
   .timeStamp
     margin-right: 0.5rem
     text-decoration: underline
-    color: darken($secondary, 35%)
+    color: #bbbbbb   
   .userName
     font-size: 1.6rem
     font-weight: bold
     color: $secondary    
   .message
     font-size: 1.6rem
+  .systemMessage
+    text-align: center
+    background: #e9e9e9
+    width: 100%
+    display: inline-block
 .chatUsers
-  width: 80px
+  width: 100px
   font-size: 1.4rem
   display: flex
   grid-row: span 2 / 3
@@ -288,10 +293,16 @@ form
     margin-bottom: 1rem 
   ul    
     list-style: none
-    padding: 0
-    margin: 0       
+    padding: 0 0.5rem
+    margin: 0
+    width: 100%
+    li 
+      width: 90%
+      font-size: 1.4rem
+      overflow-x: hidden
+      text-overflow: ellipsis       
 .chatInputBox      
-  >div 
+  div 
     width: 100%
   textarea
     font-family: "chat"
