--- a/client/src/styles/Chat.module.sass
+++ b/client/src/styles/Chat.module.sass
@@ -245,7 +245,7 @@ form
   padding: 0 0.5rem 
 .chatContent
   >div
-    height: calc(100vh - 250px)
+    height: calc(100vh - 150px)
     padding: 1rem 0 0 1rem
     display: grid
     grid-template-columns: 1fr auto
@@ -267,7 +267,8 @@ form
   .timeStamp
     margin-right: 0.5rem
     text-decoration: underline
-    color: #bbbbbb   
+    color: #bbbbbb
+    font-size: 1.4rem   
   .userName
     font-size: 1.6rem
     font-weight: bold
@@ -279,6 +280,8 @@ form
     background: #e9e9e9
     width: 100%
     display: inline-block
+    margin: 0.5rem 0
+    font-size: 1.4rem
 .chatUsers
   width: 100px
   font-size: 1.4rem
