--- a/client/src/styles/Chat.module.sass
+++ b/client/src/styles/Chat.module.sass
@@ -132,7 +132,8 @@ h2
   >div 
     display: flex
 .loginButton
-  margin-top: 1rem    
+  margin-top: 1rem
+  margin-bottom: 1rem
 .loginButton:hover, .addRoomButton:hover
   background: $sec_hover
 .cancelButton
@@ -162,6 +163,7 @@ h2
     height: 100%
     min-height: auto
     min-width: auto
+    border-radius: 0px
   h4     
     margin: 5rem
     +mq(phone-wide, max) 
@@ -171,17 +173,18 @@ h2
   display: flex
   align-items: center
   justify-content: center
-  top: -40px
+  top: -30px
   left: 0
   width: 100%
   min-width: 500px
-  height: 40px
+  height: 30px
   background-color: #fbcfcf
   color: #a53232
   font-weight: bold
   font-size: 1.4rem
   border-radius: 5px
-
+  +mq(phone-wide, max) 
+    min-width: auto   
 form 
   display: flex 
   flex-direction: column
@@ -244,6 +247,8 @@ form
   border-radius: 5px
   font-size: 1.4rem
   color: #ab5656
+  +mq(phone-wide, max)
+    margin: 2rem 0
   ul 
     padding-left: 2rem
 .sighupMessage
@@ -365,12 +370,17 @@ form
     margin-bottom: 1rem
     +mq(phone-wide, max)        
       border-bottom: 1px solid $primary
-      width: 100% 
+      width: 100%
+      margin-bottom: 0 
   ul    
     list-style: none
     padding: 0 0.5rem
     margin: 0
     width: 100%
+    +mq(phone-wide, max)        
+      max-height: 50px
+      overflow-y: auto
+      width: 100%
     li 
       width: 90%
       font-size: 1.4rem
@@ -493,6 +503,8 @@ form
     padding: 1rem 0
     width: 100%
     background-color: #8f3a24
+    +mq(phone-wide, max)
+      flex-grow: 0      
     >div
       width: 100%
       +mq(phone-wide, max)
@@ -540,11 +552,19 @@ form
             font-weight: bold
             text-transform: uppercase
             color: #23074d
-            background: linear-gradient(#F3F9A7, #CAC531)       
+            background: linear-gradient(#F3F9A7, #CAC531)
+            +mq(phone-wide, max)        
+              width: 100%
+              transform: none
+              height: 2px
+              top: 0
+              left: 0
+              overflow: hidden                     
         button:hover
           background: linear-gradient(#F3F9A7, #CAC531)    
           color: #23074d
-      +custom-scroll("roomScroll")  
+      +mq(phone-wide, min)        
+        +custom-scroll("roomScroll")          
 .addRoomWrapper  
   height: calc(100vh - 150px)
   padding: 1rem 0 0 1rem
