--- a/client/src/styles/Chat.module.sass
+++ b/client/src/styles/Chat.module.sass
@@ -38,6 +38,8 @@ $breakpoints: ("phone": 400px, "phone-wide": 480px, "phablet": 560px, "tablet-sm
   font-weight: 400
   src: local('chat'), local('Chat-font'), url(../assets/Chat-font.woff2) format('woff2') 
   
+
+///// GLOBAL STYLES  
   
 \:global 
   *
@@ -77,6 +79,8 @@ $breakpoints: ("phone": 400px, "phone-wide": 480px, "phablet": 560px, "tablet-sm
   #root
     height: 100%      
 
+
+/////////////// MAIN STYLES  
 .container
   height: 100%
   >div 
@@ -105,6 +109,8 @@ h3, h4
     width: 70px
 h2 
   margin: 2rem 0 3rem 0  
+
+/////////////// BUTTONS  
 .chatButton 
   font-family: "chat"
   padding: 0.4rem 1.8rem
@@ -142,10 +148,13 @@ h2
   border: none
   color: $secondary        
 .cancelButton:hover
-  background: transparent 
-    
+  background: transparent     
 .hidden
   visibility: hidden
+
+
+
+////////// LOGIN STYLES
 .loginWrapper  
   position: relative
   border-radius: 5px
@@ -262,6 +271,10 @@ form
     font-weight: bold
   a:hover 
     text-decoration: underline 
+
+
+
+///////////////// CHAT STYLES    
 .chatWrapper  
   position: relative
   display: grid
@@ -441,6 +454,8 @@ form
   +mq(phone-wide, max) 
     padding: 0.5rem 0.8rem 
 
+
+///////////// MENU STYLES  
 .menuWrapper
   display: flex
   flex-direction: column
