--- a/client/src/styles/Chat.module.sass
+++ b/client/src/styles/Chat.module.sass
@@ -170,7 +170,7 @@ h2
   +mq(phone-wide, max) 
     width: 100%       
     height: 100%
-    min-height: auto
+    min-height: 400px
     min-width: auto
     border-radius: 0px
   h4     
