--- a/client/src/styles/Chat.module.sass
+++ b/client/src/styles/Chat.module.sass
@@ -325,7 +325,8 @@ form
   margin-bottom: 1rem
   display: flex
   grid-row: 2
-  min-height: 0px 
+  min-height: 0px
+  padding-left: 1rem 
   flex-direction: column
   overflow-y: scroll
   overflow-x: hidden
